# ez-smallvec

./: CMakeLists.txt  README.md
include/ez/: SmallVec.hpp  smallvec.hpp
tests/: CMakeLists.txt
tests/basic/: basic.cpp
